--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -7,4 +7,12 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    location /robots.txt {
+        alias /var/www/html/robots.txt;
+    }
+
+    location /sitemap.xml {
+        alias /var/www/html/sitemap.xml;
+    }
 }
